tests/fail/elaboration/unbound-name.snap
stdout = ''
stderr = '''
error: cannot find `woopsie` in scope
  ┌─ tests/fail/elaboration/unbound-name.fathom:3:1
  │
3 │ woopsie
  │ ^^^^^^^ unbound name

'''
